--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Django==3.2.13
 django-allauth==0.51.0
 django-appconf==1.0.5
 django-bootstrap5==22.1
+django-extensions==3.2.1
 django-imagekit==4.1.0
 django-storages==1.13.1
 idna==3.4
